# beep

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  readthedocs.yml  setup.cfg  setup.py
beep/: __init__.py  _version.py  be_tools.py  beep.py  binding_energy_compute.py  cli.py  converge_sampling.py  exceptions.py  molecule_sampler.py  old_molecule_sampler.py  run_sampling.py  sampling.py  zpve.py
beep/adapters/: __init__.py  qcfractal_adapter.py
beep/core/: __init__.py  be_tools.py  benchmark_utils.py  cbs_extrapolation.py  dft_functionals.py  errors.py  exceptions.py  logging_utils.py  mbe_be_tools.py  mbe_fragmentation.py  molecule_sampler.py  nm_sampling_workflow.py  normal_mode_sampling.py  plotting_utils.py  pre_exponential.py  sampling.py  stoichiometry.py  trajectory_metrics.py  trajectory_workflow.py  zpve.py
beep/data/: ws3.xyz
beep/models/: __init__.py  base.py  be_hess.py  energy_benchmark.py  extract.py  geom_benchmark.py  mbe.py  nm_sampling.py  pre_exp.py  sampling.py
beep/tests/: nohup.out  test_beep.py  test_molecular_sampler.py
beep/utils/: __init__.py  cbs_extrapolation.py  dft_functionals.py  logging_utils.py  plotting_utils.py  qcf_utils.py
beep/workflows/: __init__.py  be_hess.py  energy_benchmark.py  extract.py  geom_benchmark.py  mbe.py  mbe_extract.py  nm_sampling.py  pre_exp.py  sampling.py
benchmark/: cbs_extrapolation.py  dft_functionals.py  launch_benchmark.py
data/: co_w2_0001.xyz  co_w2_0007.xyz  co_w3_0001.xyz  co_w3_0004.xyz  co_w5_0001.xyz  co_w5_0002.xyz  hessian_11atom.npy  hessian_11atom.xyz  hessian_11atom_energy.json  sm_ch3oh.xyz  sm_h2.xyz  sm_nh2ch2cn.xyz  sr_hco.xyz  w22_01.xyz  w22_05.xyz  w60_01.xyz  w60_05.xyz  ws5.xyz
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat  requirements.txt
examples/: be_hess.json  energy_benchmark.json  extract.json  geom_benchmark.json  mbe.json  mbe_extract.json  nm_sampling.json  pre_exp.json  sampling.json
inputs/: be_extract.sh  be_input.sh  behess_mol.sh  benchmark.sh  benchmark_energy_input.sh  comp_be_hess_input.sh  comp_be_input.sh  extract_data_input.sh  geom_benchmark_input.sh  pre_exp.sh  sampling.sh  sampling_input.sh  sampling_mol.sh
qcfractal_managers/: basic.yaml  refinement.yaml  sampling.yaml
scripts/: launch_energy.py  launch_energy_benchmark.py  launch_geom_benchmark.py  launch_hessian.py  launch_sampling.py  launch_site_sampling.py
tests/: conftest.py  test_be_tools.py  test_benchmark_utils.py  test_cbs_extrapolation.py  test_cli.py  test_dft_functionals.py  test_errors.py  test_extract.py  test_launch_sampling.py  test_logging_utils.py  test_mace_lot.py  test_mbe_convergence.py  test_mbe_extract.py  test_mbe_fragmentation.py  test_mbe_models.py  test_mbe_monitor.py  test_mbe_submission.py  test_mbe_zpve_borrow.py  test_models.py  test_molecular_sampler.py  test_molecule_sampler_extras.py  test_normal_mode_sampling.py  test_pre_exponential.py  test_qcfractal_adapter.py  test_sampling.py  test_stoichiometry.py  test_trajectory_metrics.py  test_zpve.py
tests/test_data_output/: sampling_mol_w22_01_sm_ch3oh.xyz  sampling_mol_w22_01_sm_h2.xyz  sampling_mol_w22_01_sm_nh2ch2cn.xyz  sampling_mol_w22_05_sm_ch3oh.xyz  (+32 more)
tutorial/: 01_create_molecule_collection.ipynb  02_Sampling_and_optimizing_binding_sites.ipynb
workflows/: launch_be_hess.py  launch_energy.py  launch_energy_benchmark.py  launch_energy_benchmark_old.py  launch_extract_be_data.py  launch_geom_benchmark.py  launch_pre_exp.py  launch_sampling.py
(+46 files in other folders)
